# tf_codec

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/libavutil/: ffversion.h
lib/: libavdevice.so.58  libavformat.so.58.20.100  libpostproc.so.55  libswresample.so.3.3.100
src/: common.hpp  common_dec.hpp  multi_rec.cpp
